{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 616,
  "lineage": "68adcf79-01ce-47c4-f2e1-8fd6bae0aae8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e741fbe94aadddb1",
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:elastic-ip/eipalloc-0e741fbe94aadddb1",
            "association_id": "eipassoc-0c7710120b1f7c5f8",
            "domain": "vpc",
            "id": "eipalloc-0e741fbe94aadddb1",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0bc9fb10de3275d55",
            "private_dns": "ip-10-0-1-245.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-3-104-176-190.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.176.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-eip-1",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-eip-1",
              "Project": "rag-agent"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df424f4d53dc3d36",
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:elastic-ip/eipalloc-0df424f4d53dc3d36",
            "association_id": "eipassoc-08bdef16194713043",
            "domain": "vpc",
            "id": "eipalloc-0df424f4d53dc3d36",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0698e0cf89fe40a6a",
            "private_dns": "ip-10-0-2-78.ap-southeast-2.compute.internal",
            "private_ip": "10.0.2.78",
            "public_dns": "ec2-3-106-160-93.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.160.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-eip-2",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-eip-2",
              "Project": "rag-agent"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rag_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056729a8869a8ab24",
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:instance/i-07108074c0a02fd44",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "rag-agent-poc-ec2-profile",
            "id": "i-07108074c0a02fd44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-061b8820ba6d930fc",
            "private_dns": "ip-10-0-10-154.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04fd3985b7b849e12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e8199cab7a43b7d",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-rag-agent",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-rag-agent",
              "Project": "rag-agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0a28e6d54c62d2e1b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.rag_agent",
            "aws_iam_role.ec2_rag_agent",
            "aws_iam_role.lambda_ingest",
            "aws_iam_role.lambda_query",
            "aws_opensearchserverless_access_policy.data",
            "aws_opensearchserverless_collection.documents",
            "aws_opensearchserverless_security_policy.encryption",
            "aws_opensearchserverless_security_policy.network",
            "aws_s3_bucket.lambda_deployments",
            "aws_s3_bucket.uploads",
            "aws_s3_object.rag_jar",
            "aws_security_group.alb",
            "aws_security_group.rag_agent_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "null_resource.maven_build",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:internet-gateway/igw-0a2f8dd8344f16db9",
            "id": "igw-0a2f8dd8344f16db9",
            "owner_id": "864899848476",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-igw",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-igw",
              "Project": "rag-agent"
            },
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:loadbalancer/app/rag-agent-poc-alb/e0c7023ee6fc43b5",
            "arn_suffix": "app/rag-agent-poc-alb/e0c7023ee6fc43b5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rag-agent-poc-alb-1754112323.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:loadbalancer/app/rag-agent-poc-alb/e0c7023ee6fc43b5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rag-agent-poc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-054f054c4e0e51f87"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09ece55edeb392400"
              },
              {
                "subnet_id": "subnet-0cfe571d97ee6beaa"
              }
            ],
            "subnets": [
              "subnet-09ece55edeb392400",
              "subnet-0cfe571d97ee6beaa"
            ],
            "tags": {
              "Environment": "poc",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Project": "rag-agent"
            },
            "vpc_id": "vpc-0ac669738396aab17",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:listener/app/rag-agent-poc-alb/e0c7023ee6fc43b5/e29945d1f98a0c52",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:targetgroup/rag-agent-poc-ec2-tg/c13073fa37aa4bd3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:listener/app/rag-agent-poc-alb/e0c7023ee6fc43b5/e29945d1f98a0c52",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:loadbalancer/app/rag-agent-poc-alb/e0c7023ee6fc43b5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "poc",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Project": "rag-agent"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.rag_agent_ec2",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rag_agent_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:targetgroup/rag-agent-poc-ec2-tg/c13073fa37aa4bd3",
            "arn_suffix": "targetgroup/rag-agent-poc-ec2-tg/c13073fa37aa4bd3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:targetgroup/rag-agent-poc-ec2-tg/c13073fa37aa4bd3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:loadbalancer/app/rag-agent-poc-alb/e0c7023ee6fc43b5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rag-agent-poc-ec2-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "poc",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Project": "rag-agent"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rag_agent_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:targetgroup/rag-agent-poc-ec2-tg/c13073fa37aa4bd3-20250909055058856100000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899848476:targetgroup/rag-agent-poc-ec2-tg/c13073fa37aa4bd3",
            "target_id": "i-07108074c0a02fd44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.rag_agent",
            "aws_iam_role.ec2_rag_agent",
            "aws_iam_role.lambda_ingest",
            "aws_iam_role.lambda_query",
            "aws_instance.rag_agent",
            "aws_lb_target_group.rag_agent_ec2",
            "aws_opensearchserverless_access_policy.data",
            "aws_opensearchserverless_collection.documents",
            "aws_opensearchserverless_security_policy.encryption",
            "aws_opensearchserverless_security_policy.network",
            "aws_s3_bucket.lambda_deployments",
            "aws_s3_bucket.uploads",
            "aws_s3_object.rag_jar",
            "aws_security_group.alb",
            "aws_security_group.rag_agent_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "null_resource.maven_build",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e741fbe94aadddb1",
            "association_id": "eipassoc-0c7710120b1f7c5f8",
            "connectivity_type": "public",
            "id": "nat-075f7a6dc409d5cf7",
            "network_interface_id": "eni-0bc9fb10de3275d55",
            "private_ip": "10.0.1.245",
            "public_ip": "3.104.176.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ece55edeb392400",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-gw-1",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-gw-1",
              "Project": "rag-agent"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df424f4d53dc3d36",
            "association_id": "eipassoc-08bdef16194713043",
            "connectivity_type": "public",
            "id": "nat-06ceccf74942d2a08",
            "network_interface_id": "eni-0698e0cf89fe40a6a",
            "private_ip": "10.0.2.78",
            "public_ip": "3.106.160.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cfe571d97ee6beaa",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-gw-2",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-nat-gw-2",
              "Project": "rag-agent"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:route-table/rtb-064204ca759f935a4",
            "id": "rtb-064204ca759f935a4",
            "owner_id": "864899848476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-075f7a6dc409d5cf7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-rt-1",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-rt-1",
              "Project": "rag-agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:route-table/rtb-061b3f1e8c5b0bd9d",
            "id": "rtb-061b3f1e8c5b0bd9d",
            "owner_id": "864899848476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ceccf74942d2a08",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-rt-2",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-rt-2",
              "Project": "rag-agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:route-table/rtb-04ccbd5fbe9c099a1",
            "id": "rtb-04ccbd5fbe9c099a1",
            "owner_id": "864899848476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2f8dd8344f16db9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-public-rt",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-public-rt",
              "Project": "rag-agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4ad4957e91e3560",
            "route_table_id": "rtb-064204ca759f935a4",
            "subnet_id": "subnet-02e8199cab7a43b7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0700e2acdc678fb40",
            "route_table_id": "rtb-061b3f1e8c5b0bd9d",
            "subnet_id": "subnet-0d3487ca54006e8cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc0276de1a131b97",
            "route_table_id": "rtb-04ccbd5fbe9c099a1",
            "subnet_id": "subnet-09ece55edeb392400"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ebd6a32ad2fd6b1",
            "route_table_id": "rtb-04ccbd5fbe9c099a1",
            "subnet_id": "subnet-0cfe571d97ee6beaa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:security-group/sg-054f054c4e0e51f87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054f054c4e0e51f87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rag-agent-poc-alb-2025090800235646750000000c",
            "name_prefix": "rag-agent-poc-alb-",
            "owner_id": "864899848476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-alb-sg",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-alb-sg",
              "Project": "rag-agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "litellm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:security-group/sg-0707396d46ebb9b2f",
            "description": "Security group for LiteLLM ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0707396d46ebb9b2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a28e6d54c62d2e1b"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "rag-agent-poc-litellm-sg",
            "name_prefix": "",
            "owner_id": "864899848476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-litellm-sg",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-litellm-sg",
              "Project": "rag-agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.rag_agent_ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rag_agent_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:security-group/sg-0a28e6d54c62d2e1b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a28e6d54c62d2e1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054f054c4e0e51f87"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "rag-agent-poc-ec2-2025090800235825670000000e",
            "name_prefix": "rag-agent-poc-ec2-",
            "owner_id": "864899848476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-ec2-sg",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-ec2-sg",
              "Project": "rag-agent"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:subnet/subnet-02e8199cab7a43b7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e8199cab7a43b7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899848476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-subnet-1",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-subnet-1",
              "Project": "rag-agent"
            },
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:subnet/subnet-0d3487ca54006e8cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3487ca54006e8cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899848476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-subnet-2",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-private-subnet-2",
              "Project": "rag-agent"
            },
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:subnet/subnet-09ece55edeb392400",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ece55edeb392400",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864899848476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-public-subnet-1",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-public-subnet-1",
              "Project": "rag-agent"
            },
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:subnet/subnet-0cfe571d97ee6beaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfe571d97ee6beaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864899848476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-public-subnet-2",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-public-subnet-2",
              "Project": "rag-agent"
            },
            "vpc_id": "vpc-0ac669738396aab17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899848476:vpc/vpc-0ac669738396aab17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e7ea044a7780bb8",
            "default_route_table_id": "rtb-0742bb2be02ceeb0c",
            "default_security_group_id": "sg-03689551477035f88",
            "dhcp_options_id": "dopt-01d88bc7cb0bcc8f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac669738396aab17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0742bb2be02ceeb0c",
            "owner_id": "864899848476",
            "tags": {
              "Environment": "poc",
              "Name": "rag-agent-poc-vpc",
              "Project": "rag-agent"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "rag-agent-poc-vpc",
              "Project": "rag-agent"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}